Guessed letters component and additional primitive styling

--- a/src/app/components/Phrase/Phrase.module.css
+++ b/src/app/components/Phrase/Phrase.module.css
@@ -3,6 +3,6 @@
     background-color: rgb(60, 60, 130);
     width: max-content;
     font-size: 2rem;
-    display: block;
     margin: 0 auto;
+    margin-bottom: 22px;
 }
