Already guessed letters section populating based on user guesses

--- a/src/app/components/already-guessed/already-guessed.module.css
+++ b/src/app/components/already-guessed/already-guessed.module.css
@@ -4,4 +4,9 @@
     padding: 4px;
     text-align: center;
     height: 100px;
+    font-weight: bolder;
+}
+
+.separator {
+    font-weight: lighter;
 }
