--- a/src/app/components/already-guessed/already-guessed.module.css
+++ b/src/app/components/already-guessed/already-guessed.module.css
@@ -1,10 +1,11 @@
 .alreadyGuessed {
-    background-color: lightpink;
+    background-color: rgb(242, 253, 181);
     border-radius: 2px;
-    padding: 4px;
+    padding: 5px;
     text-align: center;
-    height: 100px;
+    height: 115px;
     font-weight: bolder;
+    font-family: var(--font-monda);
 }
 
 .separator {
