--- a/src/app/components/habitat-map/habitat-map.module.css
+++ b/src/app/components/habitat-map/habitat-map.module.css
@@ -1,10 +1,11 @@
 .placeholderRectangle {
-    width: 600px;
+    width: 640px;
     height: 400px;
-    background-color: lemonchiffon;
+    background-color: rgb(251, 251, 243);
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid deeppink;
+    border: 2px solid rgb(4, 4, 4);
+    border-radius: 3px;
     margin: 12px;
 }
