--- a/src/app/components/phrase/phrase.module.css
+++ b/src/app/components/phrase/phrase.module.css
@@ -1,8 +1,9 @@
 .blank {
     color: cornsilk;
-    background-color: rgb(60, 60, 130);
     width: max-content;
-    font-size: 2rem;
+    font-size: 2.75rem;
+    font-family: var(--font-geo);
     margin: 0 auto;
-    margin-bottom: 22px;
+    margin-bottom: 9px;
+    margin-top: 16px;
 }
