--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,7 +14,17 @@
 
 .header {
     font-size: 2rem;
-    font-weight: bold;
+    text-decoration: underline dashed rgb(55, 71, 25) ;
+    text-decoration-thickness: 2px;    
+
+    text-align: center;
+    color:rgb(139, 235, 30);
+    font-family: var(--font-trade-winds);
+
+    width: 640px;
+    border: 2px dashed rgb(76, 115, 40);
+    border-radius: 2px;
+    padding: 2px 14px;
 }
 
 .topContainer {
