--- a/src/app/components/already-guessed/already-guessed.module.css
+++ b/src/app/components/already-guessed/already-guessed.module.css
@@ -1,11 +1,15 @@
 .alreadyGuessed {
     background-color: rgb(242, 253, 181);
     border-radius: 2px;
-    padding: 5px;
+    padding: 17px;
+    padding-top: 8px;
     text-align: center;
-    height: 115px;
+    height: 136px;
     font-weight: bolder;
     font-family: var(--font-monda);
+
+    border: 2px solid rgb(4, 4, 4);
+    border-radius: 3px;
 }
 
 .separator {
