Species images now displaying on map

--- a/src/app/components/broadcast/broadcast.module.css
+++ b/src/app/components/broadcast/broadcast.module.css
@@ -1,6 +1,6 @@
 .broadcast {
     background-color: rgb(32, 101, 162);
-    padding: 4px;
+    padding: 5px 11px;
     text-align: center;
     color:rgb(114, 249, 126);
     font-family: var(--font-monda);
