--- a/src/app/components/already-guessed/already-guessed.module.css
+++ b/src/app/components/already-guessed/already-guessed.module.css
@@ -1,10 +1,10 @@
 .alreadyGuessed {
-    background-color: rgb(242, 253, 181);
+    background-color: rgb(236, 251, 146);
     border-radius: 2px;
     padding: 17px;
     padding-top: 8px;
     text-align: center;
-    height: 136px;
+    height: 140px;
     font-weight: bolder;
     font-family: var(--font-monda);
 
@@ -14,4 +14,5 @@
 
 .separator {
     font-weight: lighter;
+    font-size: smaller;
 }
