--- a/src/app/components/phrase/phrase.module.css
+++ b/src/app/components/phrase/phrase.module.css
@@ -1,9 +1,10 @@
 .blank {
     color: cornsilk;
-    width: max-content;
-    font-size: 4rem;
-    font-family: var(--font-geo);
+    width: 644px;
+    font-size: 3.5rem;
+    font-family: var(--font-vt323);
     margin: 0 auto;
-    margin-bottom: 9px;
-    margin-top: 9px;
+    margin-bottom: 6px;
+    margin-top: 8px;
+    text-align: center;
 }
