--- a/src/app/components/broadcast/broadcast.module.css
+++ b/src/app/components/broadcast/broadcast.module.css
@@ -5,5 +5,7 @@
     color:rgb(114, 249, 126);
     font-family: var(--font-monda);
     width: 445px;
-    height: 2rem;
+    height: 2.1rem;
+    border: 1px solid rgb(32, 31, 31);
+    border-radius: 3px;
 }
