--- a/src/app/components/next-species-button/next-species-button.module.css
+++ b/src/app/components/next-species-button/next-species-button.module.css
@@ -1,8 +1,12 @@
 .nextButton {
-    height: 2.75rem;
+    height: 3rem;
+    background-color: rgba(45, 252, 111, 0.988);
     padding: 3px;
-    padding-top: 5px;
+    padding-top: 2px;
     margin-top: 3px;
+    font-family: var(--font-monda);
+    font-weight: bold;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px rgba(44, 40, 40, 0.2);
 }
