--- a/src/app/components/phrase/phrase.module.css
+++ b/src/app/components/phrase/phrase.module.css
@@ -1,5 +1,7 @@
 .blank {
     color: cornsilk;
+    background-color: rgb(36, 35, 47);
+    border-radius: 3px;
     width: 644px;
     font-size: 3.5rem;
     font-family: var(--font-vt323);
