--- a/src/app/components/phrase/phrase.module.css
+++ b/src/app/components/phrase/phrase.module.css
@@ -1,5 +1,6 @@
 .blank {
     color: cornsilk;
+    text-shadow: 3px 3px 6px rgba(0,0,0,0.6);
     background-color: rgb(36, 35, 47);
     border-radius: 3px;
     width: 644px;
