--- a/src/app/components/broadcast/broadcast.module.css
+++ b/src/app/components/broadcast/broadcast.module.css
@@ -1,11 +1,33 @@
 .broadcast {
-    background-color: rgb(32, 101, 162);
-    padding: 3px 11px;
-    text-align: center;
-    color:rgb(114, 249, 126);
-    font-family: var(--font-monda);
-    width: 533px;
-    height: 2.1rem;
-    border: 1px solid rgb(32, 31, 31);
-    border-radius: 3px;
+  background-color: rgb(32, 101, 162);
+  padding: 3px 11px;
+  text-align: center;
+  color: rgb(114, 249, 126);
+  font-family: var(--font-monda);
+  width: 533px;
+  height: 2.1rem;
+  border: 1px solid rgb(32, 31, 31);
+  border-radius: 3px;
+  position: relative;
+  overflow: hidden;
+}
+
+.shimmer::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -40%;
+  width: 40%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.7), transparent);
+  animation: shimmer 0.75s forwards;
+}
+
+@keyframes shimmer {
+  0% {
+    left: -50%;
+  }
+  100% {
+    left: 100%;
+  }
 }
