--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -1,12 +1,28 @@
 .nextButton {
-    height: 3rem;
-    background-color: rgba(45, 252, 111, 0.988);
-    padding: 3px;
-    padding-top: 2px;
-    margin-top: 3px;
-    font-family: var(--font-monda);
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 3px;
-    box-shadow: 0 2px 4px rgba(44, 40, 40, 0.2);
+  height: 3rem;
+  background-color: rgba(45, 252, 111, 0.988);
+  padding: 3px;
+  padding-top: 2px;
+  margin-top: 3px;
+  font-family: var(--font-monda);
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 3px;
+  box-shadow: 0 2px 4px rgba(44, 40, 40, 0.2);
+}
+
+.animateBtn {
+  animation: buttonPress 0.25s ease-in-out;
+}
+
+@keyframes buttonPress {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
