--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
 }
 
 body {
-  background-color:rgb(25, 39, 25);
+  /* background-color:rgb(25, 39, 25); */
+  background: rgb(38, 63, 32);
+  background: linear-gradient(90deg, rgb(9, 46, 28) 0%, rgb(14, 86, 6) 100%);
+
 }
 
