--- a/src/app/components/broadcast/broadcast.module.css
+++ b/src/app/components/broadcast/broadcast.module.css
@@ -1,12 +1,14 @@
 .broadcast {
-  background-color: rgb(32, 101, 162);
-  padding: 3px 11px;
+  /* background-color: rgb(32, 101, 162); */
+  background: hsla(233, 94%, 68%, 1);
+  background: linear-gradient(90deg, rgb(35, 67, 228) 0%, rgb(57, 88, 240) 100%);
+  padding: 3px 15px;
   text-align: center;
   color: rgb(114, 249, 126);
   font-family: var(--font-monda);
-  width: 533px;
+  width: max-content;
   height: 2.1rem;
-  border: 1px solid rgb(32, 31, 31);
+  border: 1px solid rgb(18, 74, 54);
   border-radius: 3px;
   position: relative;
   overflow: hidden;
