--- a/src/app/components/clue/clue.module.css
+++ b/src/app/components/clue/clue.module.css
@@ -1,18 +1,18 @@
 .clue {
-  background-color: aquamarine;
-  padding: 6px;
-  padding-left: 8px;
-  padding-bottom: 8px;
-  border-radius: 2px;
-  height: 163px;
-  font-weight: lighter;
+  /* background-color: aquamarine; */
+  background: rgb(80,249,240);
+  background: linear-gradient(90deg, rgb(86, 251, 212) 0%, rgba(44, 250, 222, 0.968) 62%, rgb(96, 253, 240) 100%);
+  padding: 6px 10px;
+  border-radius: 3px;
+  height: 157px;
   font-family: var(--font-monda);
-  font-size: 0.95rem;
+  font-size: 0.9rem;
 
   align-self: flex-start;
+  text-align: center;
   overflow-wrap: break-word;
 
-  border: 3px solid rgb(17, 17, 17);
+  border: 3px solid rgb(6, 36, 5);
   border-radius: 3px;
 
   position: relative;
@@ -20,14 +20,14 @@
 }
 
 .latin {
-  background-color: aquamarine;
-  color: rgb(75, 21, 126);
+  background: rgb(80,249,240);
+  background: linear-gradient(90deg, rgb(86, 251, 218) 0%, rgba(44, 250, 222, 0.968) 62%, rgb(96, 253, 240) 100%);
+  color: hsl(253, 69%, 23%);
   padding: 6px;
   padding-bottom: 8px;
   padding-top: 5px;
-  border-radius: 2px;
-  height: 163px;
-  font-weight: normal;
+  border-radius: 3px;
+  height: 157px;
   font-family: var(--font-geo);
   font-size: 1.75rem;
   font-style: italic;
@@ -36,7 +36,7 @@
   text-align: center;
   overflow-wrap: break-word;
 
-  border: 3px solid rgb(17, 17, 17);
+  border: 3px solid rgb(6, 36, 5);
   border-radius: 3px;
 
   position: relative;
@@ -59,7 +59,7 @@
   left: -40%;
   width: 40%;
   height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.7), transparent);
+  background: linear-gradient(90deg, transparent, rgba(178, 251, 224, 0.5), transparent);
   animation: shimmer 0.7s forwards;
 }
 
