--- a/src/app/components/phrase/phrase.module.css
+++ b/src/app/components/phrase/phrase.module.css
@@ -1,14 +1,18 @@
 .blank {
   color: cornsilk;
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.6);
-  background-color: rgb(36, 35, 47);
-  border-radius: 3px;
-  width: 644px;
+  /* background-color: rgb(36, 35, 47); */
+  background: hsla(245, 13%, 16%, .8);
+  background: linear-gradient(90deg, hsla(245, 13%, 16%, .8) 0%, rgb(41, 42, 43, 0.9) 100%);
+  border-radius: 4px;
+  border: 0.5px solid rgb(58, 57, 52);
+  width: 633px;
   font-size: 3.5rem;
   font-family: var(--font-vt323);
+  padding-bottom: 1px;
   margin: 0 auto;
-  margin-bottom: 6px;
-  margin-top: 8px;
+  margin-bottom: 3px;
+  margin-top: 3px;
   text-align: center;
 }
 
