Misc styling updates plus favicon

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,16 +9,13 @@
 
 .footer {    
     margin-top: auto;
-    color:antiquewhite;
+    color:rgb(156, 179, 155);
+    font-family: var(--font-geo);
 }
 
 .header {
     font-size: 2rem;
-    /* text-decoration: underline dashed rgb(55, 71, 25) ;
-    text-decoration-thickness: 2px;     */
-
     text-align: center;
-    /* color:rgb(139, 235, 30, 96%); */
     color:rgba(51, 252, 104, 0.96);
     background-color: rgb(2, 24, 1);
     font-family: var(--font-geo);
@@ -26,7 +23,8 @@
     width: 633px;
     border: 1.3px solid rgb(54, 79, 30);
     border-radius: 4px;
-    padding: 1px 7px;
+    padding: 0 7px;
+    /* padding-bottom: 1px; */
 }
 
 .topContainer {
