Major mobile refactor

--- a/src/app/components/already-guessed/already-guessed.module.css
+++ b/src/app/components/already-guessed/already-guessed.module.css
@@ -6,13 +6,14 @@
   border-radius: 3px;
   padding: 17px;
   padding-top: 3px;
+  margin-top: 3px;
   text-align: center;
   height: 157px;
   font-family: var(--font-henny-penny);
   font-weight: bolder;
   font-size: 0.95rem;
 
-  border: 3px solid rgb(8, 53, 5);
+  border: 4px solid rgb(6, 36, 5);
   border-radius: 5px;
 }
 
@@ -62,4 +63,18 @@
 .sparkle {
   display: inline-block;
   animation: sparkle 0.5s ease-in-out;
+}
+
+@media (max-width: 650px) {
+  .alreadyGuessed {
+    height: 85px;
+    width: var(--mobile-element-width);
+    font-size: 0.81rem;
+    padding: 16px;
+    padding-top: 3px;
+  }
+  .agLabel {
+    font-size: 0.75rem;
+    margin-bottom: 5px;
+  }
 }
