--- a/src/app/components/clue/clue.module.css
+++ b/src/app/components/clue/clue.module.css
@@ -8,6 +8,7 @@
   padding-right: 10px;  
   padding-top: 4px;
   padding-bottom: 6px;
+  margin-top: 3px;
   border-radius: 3px;  
 
   font-family: var(--font-monda);
@@ -15,7 +16,7 @@
   text-align: center;
   overflow-wrap: break-word;
 
-  border: 3px solid rgb(6, 36, 5);
+  border: 4px solid rgb(6, 36, 5);
   border-radius: 5px;
   background: rgb(80,249,240);
   background: linear-gradient(90deg, rgb(86, 251, 212) 0%, rgba(44, 250, 222, 0.968) 62%, rgb(96, 253, 240) 100%);
@@ -31,6 +32,7 @@
   padding: 6px;
   padding-bottom: 8px;
   padding-top: 5px;
+  margin-top: 5px;
   border-radius: 5px;
   height: 157px;
   font-family: var(--font-geo);
@@ -41,7 +43,7 @@
   text-align: center;
   overflow-wrap: break-word;
 
-  border: 3px solid rgb(6, 36, 5);
+  border: 4px solid rgb(6, 36, 5);
   border-radius: 3px;
 
   position: relative;
@@ -74,5 +76,26 @@
   }
   100% {
     left: 100%;
+  }
+}
+
+@media (max-width: 650px) {
+  .clue {
+    height: 105px;
+    font-size: 0.85rem;
+    margin: auto;
+    margin-top: 5px;
+    width: var(--mobile-element-width);
+  }
+  .latin {
+    height: 105px;
+    margin: auto;
+    margin-top: 5px;
+    padding-top: 1px;
+    padding-bottom: 16px;
+    width: var(--mobile-element-width);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 }
