--- a/src/app/components/music-button/music-button.module.css
+++ b/src/app/components/music-button/music-button.module.css
@@ -10,3 +10,18 @@
   padding-bottom: 0;
   border-radius: 3px;
 }
+
+
+
+@media (max-width: 650px){
+  .musicBtnImage {
+    width: 18px;
+    height: 14px;
+    
+  }
+  .musicBtn {
+    height: 23px; 
+    padding: 2px;   
+    padding-bottom: 0;    
+  }
+}
