--- a/src/app/components/phrase/phrase.module.css
+++ b/src/app/components/phrase/phrase.module.css
@@ -1,11 +1,11 @@
-.blank {
+.phrase {
   color: cornsilk;
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
   /* background-color: rgb(36, 35, 47); */
   background: hsla(245, 13%, 16%, .8);
   background: linear-gradient(90deg, hsla(245, 13%, 16%, .8) 0%, rgb(41, 42, 43, 0.9) 100%);
   border-radius: 5px;
-  border: 0.5px solid rgb(58, 57, 52);
+  border: 1px solid rgb(58, 57, 52);
   width: 632px;
   font-size: 3.5rem;
   font-family: var(--font-vt323);
@@ -40,4 +40,11 @@
   display: inline-block;
   animation: phraseGuessAnimation 0.4s;
   transform-origin: center;
+}
+
+@media (max-width: 650px) {
+  .phrase {
+    width: calc(var(--mobile-element-width) - 3px);
+    font-size: 2.15rem;
+  }
 }
