--- a/src/app/components/species-image/species-image.module.css
+++ b/src/app/components/species-image/species-image.module.css
@@ -1,6 +1,8 @@
 .speciesWrapper {
   position: absolute;
   overflow: hidden;
+  top: var(--species-top);
+  left: var(--species-left);
 }
 
 .speciesImage {
@@ -26,4 +28,15 @@
   height: 100%;
   background: linear-gradient(90deg, transparent, rgba(249, 241, 192, 0.7), transparent);
   animation: shimmer 1s forwards;
+}
+
+@media (max-width: 650px) {
+  .speciesImage {
+    width: 50px;
+    height: 33px;
+  }
+  .speciesWrapper {
+    top: var(--species-mobile-top);
+    left: var(--species-mobile-left);
+  }
 }
