--- a/src/app/components/input/input.module.css
+++ b/src/app/components/input/input.module.css
@@ -7,10 +7,11 @@
 
 @media (max-width: 650px) {
     .input {
-        height: 1.5rem;
-        font-size: 0.75rem;
+        height: 1.75rem;
+        font-size: 16px;
         width: 90px;
         margin-top: 7px;
-        margin-bottom: 7px;
+        margin-bottom: 8px;
+        width: 130px;
     }
 }
