--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -30,9 +30,10 @@
 
 @media (max-width: 650px) {
   .nextButton {
-    height: 1.5rem;
-    font-size: 0.75rem;
-    padding-bottom: 22px;
+    height: 1.75rem;
+    width: 140px;
+    font-size: 16px;
+    padding-bottom: 26px;
     padding-left: 7px;
     padding-right: 4px;
     justify-content: center;
