--- a/src/app/components/music-button/music-button.module.css
+++ b/src/app/components/music-button/music-button.module.css
@@ -2,7 +2,8 @@
   margin-left: auto;
   width: max-content;
 
-  background-color: rgba(89, 238, 149, 0.96);
+  /* background-color: rgba(89, 238, 149, 0.96); */
+  background-color: red;
   color: rgb(2, 24, 1);
   font-family: var(--font-geo);
   font-weight: bold;
