WIP fix iOS audio with audio initializer

--- a/src/app/components/music-button/music-button.module.css
+++ b/src/app/components/music-button/music-button.module.css
@@ -3,7 +3,7 @@
   width: max-content;
 
   /* background-color: rgba(89, 238, 149, 0.96); */
-  background-color: red;
+  background-color: orange;
   color: rgb(2, 24, 1);
   font-family: var(--font-geo);
   font-weight: bold;
