--- a/src/app/components/audio-initializer/audio-initializer.module.css
+++ b/src/app/components/audio-initializer/audio-initializer.module.css
@@ -18,6 +18,7 @@
   border-radius: 10px;
   text-align: center;
   max-width: 80%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .button {
@@ -33,5 +34,4 @@
   margin-top: 20px;
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
