--- a/src/app/components/audio-initializer/audio-initializer.module.css
+++ b/src/app/components/audio-initializer/audio-initializer.module.css
@@ -22,7 +22,8 @@
 }
 
 .button {
-  background: rgb(76, 175, 80);
+  /* background: rgb(76, 175, 80); */
+  background: red;
   color: rgb(2, 24, 1);
   border: none;
   border-bottom: 4px solid rgb(56, 142, 60);
