--- a/src/app/components/music-button/music-button.module.css
+++ b/src/app/components/music-button/music-button.module.css
@@ -9,17 +9,19 @@
   padding: 3px;
   padding-bottom: 0;
   border-radius: 3px;
+  border: 1px solid rgba(51, 252, 104, 0.96);
 }
 
 @media (max-width: 650px){
   .musicBtnImage {
-    width: 18px;
-    height: 14px;
+    width: 20px;
+    height: 15px;
     
   }
   .musicBtn {
-    height: 23px; 
+    height: 26px; 
     padding: 2px;   
+    padding-top: 2px;
     padding-bottom: 0;    
   }
 }
