--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -1,9 +1,11 @@
 .nextButton {
   height: 3rem;
+  width: 101px;
   background-color: rgba(26, 250, 90, 0.99);
-  padding: 3px;
+  padding: 4px;
   padding-top: 2px;
-  margin-top: 3px;
+  padding-left: 5px;
+  margin-top: 5px;
   font-family: var(--font-monda);
   font-weight: bold;
   cursor: pointer;
@@ -31,13 +33,13 @@
 @media (max-width: 650px) {
   .nextButton {
     height: 2.5rem;
-    width: 170px;
+    width: 175px;
     font-size: 16px;
     padding-bottom: 4px;
     padding-left: 17px;
     padding-right: 14px;
     justify-content: center;
     margin-top: 5px;
-    margin-bottom: 7px;
+    margin-bottom: 27px;
   }
 }
