--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -2,6 +2,7 @@
   height: 3rem;
   width: 101px;
   background-color: rgba(26, 250, 90, 0.99);
+  color: rgb(2, 24, 1);
   padding: 4px;
   padding-top: 2px;
   padding-left: 5px;
@@ -40,6 +41,6 @@
     padding-right: 14px;
     justify-content: center;
     margin-top: 5px;
-    margin-bottom: 47px;
+    margin-bottom: 55px;
   }
 }
