--- a/src/app/components/on-screen-keyboard/on-screen-keyboard.module.css
+++ b/src/app/components/on-screen-keyboard/on-screen-keyboard.module.css
@@ -1,50 +1,63 @@
 .keyboard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 6px;
-    width: 100%;
-    max-width: 360px;
-    margin: 0 auto;
-  }
-  
-  .keyboardRow {
-    display: flex;
-    justify-content: center;
-    gap: 5px;
-    width: 100%;
-  }
-  
-  .key {
-    width: 32px;
-    height: 36px;
-    border-radius: 6px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgb(202, 246, 106);
-    color: rgb(2, 24, 1);
-    border: 1px solid #7eac79;
-    font-weight: bold;
-    font-size: 16px;
-    font-family: var(--font-monda);
-    cursor: pointer;
-    transition: background-color 0.2s ease, color 0.2s ease;
-  }
-  
-  .key:hover:not(:disabled) {
-    background-color: #e0e0e0;
-  }
-  
-  .key:active:not(:disabled) {
-    transform: scale(0.95);
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6px;
+  width: 100%;
+  max-width: 360px;
+  margin: 0 auto;
+}
 
-  .guessed {
-    background-color: #c7f1e4;
-    color: #888;
-    cursor: not-allowed;
-    border: 1px solid #7eac79;
-  }
+.keyboardRow {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  width: 100%;
+}
 
-  
+.key {
+  width: 32px;
+  height: 36px;
+  border-radius: 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(202, 246, 106);
+  color: rgb(2, 24, 1);
+  border: 1px solid #7eac79;
+  font-weight: bold;
+  font-size: 16px;
+  font-family: var(--font-monda);
+  cursor: pointer;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.key:hover:not(:disabled):not(.incorrectlyGuessed):not(.correctlyGuessed) {
+  background-color: #e0e0e0;
+}
+
+.key:active:not(:disabled) {
+  transform: scale(0.95);
+}
+
+.incorrectlyGuessed {
+  background-color: #e3b076;
+  color: #6a856f;
+  border: 1px solid #7eac79;
+  cursor: default;
+}
+
+.key.correctlyGuessed:hover {
+  background-color: #37d156;
+}
+
+.key.incorrectlyGuessed:hover {
+  background-color: #ee805b;
+}
+
+.correctlyGuessed {
+  background-color: #78f992;
+  color: #6a856f;
+  border: 1px solid #7eac79;
+  cursor: default;
+}
