--- a/src/app/components/species-image/species-image.module.css
+++ b/src/app/components/species-image/species-image.module.css
@@ -40,3 +40,10 @@
     left: var(--species-mobile-left);
   }
 }
+
+@media (max-width: 360px) {
+  .speciesWrapper {
+    top: var(--species-mini-top);
+    left: var(--species-mini-left);
+  }
+}
