--- a/src/app/components/about-modal-toggle/about-modal-toggle.module.css
+++ b/src/app/components/about-modal-toggle/about-modal-toggle.module.css
@@ -6,6 +6,7 @@
   font-family: var(--font-geo);
   font-size: 1.15rem;
   text-decoration: underline;
+  padding-left: 4px;
 }
 
 .aboutModalContentLink {
