--- a/src/app/components/next-button/next-button.module.css
+++ b/src/app/components/next-button/next-button.module.css
@@ -42,6 +42,8 @@
     justify-content: center;
     margin-top: 5px;
     margin-bottom: 70px;
+    border: 2px solid rgb(2, 28, 4);
+    box-shadow: 4px 2px 4px rgba(48, 44, 44, 0.3);
   }
 }
 
